# 36120_AT2_24886400

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/predictive/: sgd.joblib
notebooks/forecasting/: rusanvaidya-24886400-forecasting_sarima.ipynb  rusanvaidya-24886400_sarima.ipynb
notebooks/predictive/: rusan_vaidya-24886400-predictive_SGD.ipynb  rusan_vaidya-24886400_RandomForestRegressor.ipynb  rusan_vaidya-24886400_SGD.ipynb  rusanvaidya-24886400-predictive_EDA.ipynb  rusanvaidya-24886400-predictive_RandomForestRegressor.ipynb  rusanvaidya-24886400_EDA.ipynb
