[tool.poetry]
name = "36120-at2-24886400"
version = "0.0.1"
description = ""
authors = ["rusanvaidya <ru7an.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"
numpy = "^2.1.2"
gdown = "^5.2.0"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
# my_krml_24886400 = { version = "2024.0.1.5", source = "testpypi" }
xgboost = "^2.1.1"
scikit-optimize = "^0.10.2"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
